# Auto_aim_HDUS

./: CMakeLists.txt  README.md  WatchDDog.sh  config.yaml  debug.h  main.cpp  setup.sh  ttyUSB.sh
AngleSolver/XML/: out_camera_data.xml  out_camera_data1.xml  out_camera_data_pre.xml
AngleSolver/include/: AngleSolver.h
AngleSolver/src/: AngleSolver.cpp
ArmorDetector/include/: armor.h  detector.h  number_classifier.h
ArmorDetector/src/: detector.cpp  number_classifier.cpp
HKCamera/XML/: CameraParam.xml
HKCamera/include/: Camera.h
HKCamera/src/: Camera.cpp
Processor/include/: extended_kalman_filter.h  processor.h  tracker.h
Processor/src/: extended_kalman_filter.cpp  processor.cpp  tracker.cpp
SerialPort/include/: serialport.h
SerialPort/src/: serialport.cpp
Thread/: thread.cpp  thread.h
general/: DataType.h  general.cpp  general.h
utils/Angles/: angles.h
utils/CameraCalibration/: CMakeLists.txt  CameraParam.yaml  camera_calibration.cpp  default.xml
utils/CameraCalibration/params/: 2BDF67015844.yaml
